Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-83411

Qml drag & drop crash on some machines

XMLWordPrintable

    • Windows
    • 7b9b44d8f45c57df1393960807497bd7286d3471 (qt/qtdeclarative/5.15.0)

      Dragging an item and dropping it on a drop area seems to cause a crash on some machines after a few attempts. The call stack is:

      _Qt5Cored.dll!QEvent::type() Line 301 C++_
       _Qt5Quickd.dll!QQuickPointerMouseEvent::isPressEvent() Line 1535 C++_
      quick/items/qquickevents.cpp:1745
       _Qt5Quickd.dll!QQuickWindowPrivate::sendFilteredPointerEventImpl(QQuickPointerEvent * event, QQuickItem * receiver, QQuickItem * filteringParent) Line 2906 C++_
       _Qt5Quickd.dll!QQuickWindowPrivate::sendFilteredPointerEvent(QQuickPointerEvent * event, QQuickItem * receiver, QQuickItem * filteringParent) Line 2884 C++_
       _Qt5Quickd.dll!QQuickWindowPrivate::deliverMouseEvent(QQuickPointerMouseEvent * pointerEvent) Line 1781 C++_
       _Qt5Quickd.dll!QQuickWindowPrivate::deliverPointerEvent(QQuickPointerEvent * event) Line 2363 C++_
       _Qt5Quickd.dll!QQuickWindowPrivate::handleMouseEvent(QMouseEvent * event) Line 2225 C++_
       _Qt5Quickd.dll!QQuickWindow::mouseMoveEvent(QMouseEvent * event) Line 2163 C++_
       _Qt5Guid.dll!QWindow::event(QEvent * ev) Line 2243 C++_
       _Qt5Quickd.dll!QQuickWindow::event(QEvent * e) Line 1688 C++_
       _Qt5Cored.dll!QCoreApplicationPrivate::notify_helper(QObject * receiver, QEvent * event) Line 1249 C++_
       _Qt5Cored.dll!doNotify(QObject * receiver, QEvent * event) Line 1178 C++_
       _Qt5Cored.dll!QCoreApplication::notify(QObject * receiver, QEvent * event) Line 1165 C++_
       _Qt5Guid.dll!QGuiApplication::notify(QObject * object, QEvent * event) Line 1797 C++_
       _Qt5Cored.dll!QCoreApplication::notifyInternal2(QObject * receiver, QEvent * event) Line 1088 C++_
       _Qt5Cored.dll!QCoreApplication::sendSpontaneousEvent(QObject * receiver, QEvent * event) Line 1489 C++_
       _Qt5Guid.dll!QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent * e) Line 2108 C++_
       _Qt5Guid.dll!QGuiApplicationPrivate::processWindowSystemEvent(QWindowSystemInterfacePrivate::WindowSystemEvent * e) Line 1843 C++_
       _Qt5Guid.dll!QWindowSystemInterface::sendWindowSystemEvents(QFlags<enum QEventLoop::ProcessEventsFlag> flags) Line 1157 C++_
       _qwindowsd.dll!QWindowsGuiEventDispatcher::sendPostedEvents() Line 83 C++_
       _Qt5Cored.dll!qt_internal_proc(HWND__ * hwnd, unsigned int message, unsigned __int64 wp, __int64 lp) Line 247 C++_
       _[External Code]_ 
       _Qt5Cored.dll!QEventDispatcherWin32::processEvents(QFlags<enum QEventLoop::ProcessEventsFlag> flags) Line 640 C++_
       _qwindowsd.dll!QWindowsGuiEventDispatcher::processEvents(QFlags<enum QEventLoop::ProcessEventsFlag> flags) Line 74 C++_
       _Qt5Cored.dll!QEventLoop::processEvents(QFlags<enum QEventLoop::ProcessEventsFlag> flags) Line 139 C++_
       _Qt5Cored.dll!QEventLoop::exec(QFlags<enum QEventLoop::ProcessEventsFlag> flags) Line 225 C++_
       _Qt5Cored.dll!QCoreApplication::exec() Line 1389 C++_
       _Qt5Guid.dll!QGuiApplication::exec() Line 1785 C++_
       _cvi42.exe!main(int argc, char * * argv) Line 74 C++_
       _cvi42.exe!WinMain(HINSTANCE__ * __formal, HINSTANCE__ * __formal, char * __formal, int __formal) Line 97 C++_
      

      So far this issue seems to appear only on Windows. The issue has been reproduced on the following machines:

      • Windows 10 Pro- NVIDIA GeForce GTX 1060- 1903 - 19033.1 - Intel i7 - 64-bit operating system - x64-based processor - 16 GB RAM
      • Windows 10 Pro- NVIDIA GeForce GTX 1060- 1903 - 19017.1 - Intel i7 - 64-bit operating system - x64-based processor - 16 GB RAM

      while the problem cannot be reproduced at all on:

      • Windows 10 Enterprise- 1803 -17134.1365
      • Windows 10 Pro - 1909 - 18362.270 - Inter(R) Core(TM) i7-6700k CPU @4.00GHz - 64 bit Operating System -16 GB
      • Mac OS Catalina 10.15 - AMD Radeon R9 M370X 2048 MB - Intel(R) Core(TM) i7-4980HQ CPU @ 2.80GHz - 16 GB RAM MacBook Pro
      • Windows 10 Pro N- 1909 - 18363.657 - Inter(R) Core(TM) i7-8086k CPU @4.00GHz, 4008MHz, 4 Core(s) - 64 bit Operating System -16 GB

      Steps to reproduce the issue:

      • Run the attached project
      • Drag and drop some of the items a few times.

       

        1. qtbug8341.zip
          184 kB
          Friedemann Kleint
        2. qtbug83411_crash_location.PNG
          81 kB
          Miika Pernu
        3. qtbug83411.zip
          182 kB
          Miika Pernu
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kleint Friedemann Kleint
            miikapernu Miika Pernu
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes