Fix crashes when dragging

In QQuickWindowPrivate::sendFilteredPointerEventImpl(),
it appears that the mouse event of the QQuickPointerMouseEvent
can be reset in childMouseEventFilter(), causing a crash
in QQuickPointerMouseEvent::isPressEvent().

Add checks QQuickPointerMouseEvent to fix this.

Fixes: QTBUG-83411
Change-Id: I45f7406de4363974fc6adcac2999cdf55a0c84a7
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>