src/quick/items/qquickevents.cpp
@@ -1744,6 +1744,8 @@ bool QQuickSinglePointEvent::hasExclusiveGrabber(const QQuickPointerHandler *han
 
 bool QQuickPointerMouseEvent::isPressEvent() const
 {
+    if (!m_event)
+        return false;
     auto me = static_cast<QMouseEvent*>(m_event);
     return ((me->type() == QEvent::MouseButtonPress || me->type() == QEvent::MouseButtonDblClick) &&
             (me->buttons() & me->button()) == me->buttons());
@@ -1751,18 +1753,24 @@ bool QQuickPointerMouseEvent::isPressEvent() const
 
 bool QQuickPointerMouseEvent::isDoubleClickEvent() const
 {
+    if (!m_event)
+        return false;
     auto me = static_cast<QMouseEvent*>(m_event);
     return (me->type() == QEvent::MouseButtonDblClick);
 }
 
 bool QQuickPointerMouseEvent::isUpdateEvent() const
 {
+    if (!m_event)
+        return false;
     auto me = static_cast<QMouseEvent*>(m_event);
     return me->type() == QEvent::MouseMove;
 }
 
 bool QQuickPointerMouseEvent::isReleaseEvent() const
 {
+    if (!m_event)
+        return false;
     auto me = static_cast<QMouseEvent*>(m_event);
     return me && me->type() == QEvent::MouseButtonRelease;
 }
